tests/urmoac/errors/unknown_mode_entrainment/errors.urmoac
Error: trying to entrain unknown mode 'xxx'.
